# dsda-doom

./: .gitattributes  .gitignore  Brewfile  Gemfile  README.md  _config.yml
prboom2/: AUTHORS  CMakeLists.txt  INSTALL  vcpkg-configuration.json  vcpkg.json
prboom2/ICONS/: CMakeLists.txt  dsda-doom.bash  dsda-doom.desktop  icons.rc  prboom-plus.bash  prboom-plus.exe.manifest
prboom2/cmake/: CheckBigEndian.cmake  DsdaConfigHeader.cmake  DsdaDependencies.cmake  DsdaDepsSetup.cmake  DsdaHelpers.cmake  DsdaOptions.cmake  DsdaSanitiser.cmake  DsdaTargetFeatures.cmake  FindDUMB.cmake  FindFluidSynth.cmake  FindLibMad.cmake  FindOgg.cmake  FindPortMidi.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSndFile.cmake  FindVorbis.cmake  Findlibopenmpt.cmake  Findlibxmp.cmake  Findlibzip.cmake  Findmad.cmake  GetAvailableFlags.cmake  PkgConfigHelper.cmake  SelectDllConfigurations.cmake  config.h.cin
prboom2/data/: CMakeLists.txt  prboom.txt  rd_graphic.c  rd_graphic.h  rd_main.c  rd_output.c  rd_output.h  rd_palette.c  rd_palette.h  rd_sound.c  rd_sound.h  rd_util.c  rd_util.h
prboom2/data/graphics/: cross1.ppm  cross2.ppm  cross3.ppm  cross4.ppm  cross5.ppm  cross6.ppm  cross7.ppm  dig033.ppm  dig034.ppm  dig035.ppm  dig036.ppm  dig037.ppm  dig038.ppm  dig039.ppm  dig040.ppm  dig041.ppm  dig042.ppm  dig043.ppm  dig044.ppm  dig046.ppm  dig059.ppm  dig060.ppm  dig061.ppm  dig062.ppm  dig063.ppm  dig064.ppm  dig092.ppm  dig094.ppm  dig095.ppm  dig096.ppm  dig123.ppm  dig124.ppm  dig125.ppm  dig126.ppm  dig46.ppm  fonta06.ppm  fonta28.ppm  fonta30.ppm
prboom2/data/lumps/: -prbhud-.lmp  crheresy.lmp  crhexen.lmp  dsdacr.lmp  dsdahud.lmp  dsdatc.lmp  glfp_fuzz.lmp  glfp_idx.lmp  glh_dith.lmp  glh_idx.lmp  gls_fuzz.lmp  gls_main.lmp  gls_sb.lmp  gls_v.lmp  sndcurve.lmp
prboom2/data/lumps/soundfont/: CREDITS.txt
prboom2/doc/: CMakeLists.txt  README.command-line  dsda-doom-game-server.6  dsda-doom.6  dsda-doom.cfg.5  mbf21.md  mbf21_level_editing_spec.md
prboom2/packaging/: CMakeLists.txt  DarwinGenerator.cmake  LinuxGenerator.cmake
prboom2/src/: CMakeLists.txt  am_map.c  am_map.h  d_client.c  d_deh.c  d_deh.h  d_englsh.h  d_event.h  d_ipxgate.c  d_items.c  d_items.h  d_main.c  d_main.h  d_net.h  d_player.h  d_server.c  d_think.h  d_ticcmd.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dsda.c  dsda.h  dsda_mobj_extension.h  dstrings.c  dstrings.h  e6y.c  e6y.h  e6y_launcher.c  e6y_launcher.h  f_finale.c  f_finale.h  f_finale2.c  f_wipe.c  g_game.c  g_game.h  g_overflow.c  (+164 more)
prboom2/src/MAC/: LauncherApp.m  UKFileWatcher.h  UKKQueue.m  UKMainThreadProxy.m  i_sound.m
prboom2/src/MUSIC/: dbopl.c  dbopl.h  dumbplayer.c  dumbplayer.h  flplayer.c  flplayer.h  libopenmptplayer.c  libopenmptplayer.h  madplayer.c  madplayer.h  midifile.c  midifile.h  musicplayer.h  opl.c  opl.h  opl3.c  opl3.h  opl_queue.c  opl_queue.h  oplplayer.c  oplplayer.h  portmidiplayer.c  portmidiplayer.h  vorbisplayer.c  vorbisplayer.h  xmpplayer.c  xmpplayer.h
prboom2/src/PCSOUND/: pcsound.c  pcsound.h  pcsound_linux.c  pcsound_sdl.c  pcsound_win32.c
prboom2/src/POSIX/: i_system.c
prboom2/src/SDL/: i_joy.c  i_main.c  i_sndfile.c  i_sndfile.h  i_sound.c  i_sshot.c  i_system.c  i_video.c
prboom2/src/TEXTSCREEN/: doomkeys.h  txt_font.h  txt_largefont.h  txt_main.h  txt_sdl.c  txt_sdl.h  txt_smallfont.h
prboom2/src/dsda/: aim.c  aim.h  ambient.cpp  ambient.h  analysis.c  analysis.h  args.c  args.h  astar.c  astar.h  brute_force.c  brute_force.h  bsp.c  bsp.h  bspbleed.c  bspchunk.c  bspdump.c  bspdump.h  bspinternal.h  bspnodes.c  bsprender.c  build.c  build.h  command_display.c  command_display.h  compatibility.c  config.c  config.h  configuration.c  configuration.h  console.c  console.h  coordinate_display.c  coordinate_display.h  cr_table.c  data_organizer.c  data_organizer.h  death.c  death.h  demo.c  (+118 more)
prboom2/src/dsda/ajbsp/: bsp.h  glue.cc  glue.h  level.cc  local.h  misc.cc  node.cc  parse.cc  parse.h  raw_def.h  system.h  utility.cc  utility.h  wad.cc  wad.h
prboom2/src/dsda/gl/: render_scale.c  render_scale.h
prboom2/src/dsda/hud_components/: ammo_text.c  ammo_text.h  armor_text.c  armor_text.h  attempts.c  attempts.h  base.c  base.h  big_ammo.c  big_ammo.h  big_armor.c  big_armor.h  big_armor_text.c  big_armor_text.h  big_artifact.c  big_artifact.h  big_health.c  big_health.h  big_health_text.c  big_health_text.h  (+50 more)
prboom2/src/heretic/: _ct_chat.h  _d_main.c  _d_net.c  _deh_ammo.c  _deh_frame.c  _deh_htext.c  _deh_htic.c  _deh_htic.h  _deh_sound.c  _deh_thing.c  _deh_weapon.c  _doomdata.h  _doomdef.h  _f_finale.c  _g_game.c  _mn_menu.c  _p_ceiling.c  _p_doors.c  _p_enemy.c  _p_floor.c  _p_inter.c  _p_local.h  _p_map.c  _p_mobj.c  _p_pspr.c  _p_saveg.c  _p_setup.c  _p_spec.c  _p_spec.h  _p_telept.c  _p_user.c  _r_bsp.c  _r_data.c  _r_local.h  _r_plane.c  _s_sound.c  _sb_bar.c  _sounds.c  am_data.h  am_map.c  (+23 more)
prboom2/src/hexen/: _a_action.c  _am_map.c  _d_net.c  _f_finale.c  _g_game.c  _h2_main.c  _h2def.h  _in_lude.c  _info.c  _info.h  _m_random.c  _m_random.h  _mn_menu.c  _p_acs.c  _p_anim.c  _p_ceilng.c  _p_doors.c  _p_enemy.c  _p_floor.c  _p_inter.c  _p_lights.c  _p_local.h  _p_map.c  _p_maputl.c  _p_mobj.c  _p_plats.c  _p_pspr.c  _p_setup.c  _p_sight.c  _p_spec.c  _p_spec.h  _p_switch.c  _p_telept.c  _p_things.c  _p_tick.c  _p_user.c  _po_man.c  _r_bsp.c  _r_data.c  _r_draw.c  (+37 more)
prboom2/src/textscreen/: doomkeys.h  txt_main.h  txt_sdl.c  txt_sdl.h  txt_utf8.c  txt_utf8.h
prboom2/tests/: AnalysisTestRunner.cmake  AnalysisTests.cmake  CMakeLists.txt  CategoryTestRunner.cmake  CategoryTests.cmake  HereticTestRunner.cmake  HereticTests.cmake  SyncTestRunner.cmake  SyncTests.cmake  TestChecks.cmake  TestRunnerHelpers.cmake
prboom2/tests/WAD/: .gitignore  analysis_test.wad
prboom2/tests/lmps/: 1156ns01.lmp  30uv1755.lmp  cl01-022.lmp  cm20k222.lmp  crusher.lmp  d2dtqr.lmp  fa04-109.lmp  h3ma6248.lmp  h4sp1055.lmp  keen.lmp  lv01-005.lmp  lv08str037.lmp  lve3-2654.lmp  me1c4537.lmp  nm04-036.lmp  os01-2394.lmp  pa08-020.lmp  reality.lmp  voodoo.lmp
(+1177 files in other folders)
